# SoCMake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README.md  SoCMakeConfig.cmake  python_requirements.txt
.github/workflows/: gitlab-ci.yml  linting.yml  pages.yml  pages_preview.yml  testing.yml
bootstrap/: socmake-config.cmake
cmake/: hwip.cmake
cmake/fusesoc/: add_ip_from_fusesoc.cmake  fusesoc_to_socmake.py
cmake/lint/: verible.cmake  vhdl_linter.cmake
cmake/peakrdl/: peakrdl_docusaurus.cmake  peakrdl_dump.cmake  peakrdl_halcpp.cmake  peakrdl_html.cmake  peakrdl_ipblocksvg.cmake  peakrdl_print.cmake  peakrdl_regblock.cmake  peakrdl_socgen.cmake  peakrdl_topgen.cmake
cmake/sim/: sim_utils.cmake
cmake/sim/verilator/verilator/: CMakeLists.txt
cmake/synth/: sv2v.cmake
cmake/systemrdl/: desyrdl.cmake
cmake/utils/: alias_dereference.cmake  colours.cmake  file_paths.cmake  find_python.cmake  get_all_targets.cmake  graphviz.cmake  groups.cmake  option.cmake  print_list.cmake  socmake_graph.cmake  socmake_message.cmake  subdirectory_search.cmake  uniquify_files_by_basename.cmake
docs/: CMakeLists.txt  README.md  docusaurus.config.js  package-lock.json  package.json  python_requirements.txt  rst_to_md.py  sidebars.js
docs/api/: Makefile  api_config.yaml  conf.py.in
docs/blog/: 2026-06-15-welcome.md  authors.yml
docs/docs/: api_documentation.mdx  getting_started.mdx  global_variables.md  intro.md
docs/docs/build_system/: intro.mdx
docs/docs/development/: _category_.json  contributing.mdx  testing.mdx
docs/docs/examples/: 1_options.mdx  2_linking_ips.mdx  3_simulation.md  5_mixed_language.mdx  6_dpi-c.mdx  7_systemc.mdx  8_uvm-systemc.mdx  9_cocotb.mdx  README.md  _category_.json  file.dot  linking_ips.mdx  simulation.md  table_ex.mdx  verilator.mdx
docs/src/components/HomepageFeatures/: index.js
docs/static/examples/: sim_example.gif.yml
examples/: README.md  python_requirements.txt
examples/custom_help/: CMakeLists.txt
examples/dpi-c/: CMakeLists.txt
examples/linking_ips/: CMakeLists.txt
examples/options/: CMakeLists.txt
examples/simple_cocotb/: CMakeLists.txt  simple_cocotb_example.py
examples/simple_mixed_language/: CMakeLists.txt
examples/simple_mixed_language_sc_vlog/: CMakeLists.txt  (+2 more)
misc/: fzf_socmake.sh
tests/tests/: CMakeLists.txt  getcmaketest.cmake
tests/tests/add_ip/: add_ip.cmake  add_ip_1_token.cmake  add_ip_description.cmake  add_ip_fail_2_tokens.cmake  add_ip_lib_FALSE.cmake  add_ip_name_FALSE.cmake  add_ip_vendor_FALSE.cmake  add_ip_version0.cmake
tests/tests/alias_dereference/: alias_dereference.cmake
tests/tests/check_languages/: check_languages_warning.cmake
tests/tests/generate_sources_list/: CMakeLists.txt
tests/tests/generate_sources_list/golden/top_sources/: include_sources.f  rtl_sources.f
tests/tests/generate_sources_list/golden/top_synthesis_sources/: include_sources.f  rtl_sources.f
tests/tests/generate_sources_list/ips/mod1/: CMakeLists.txt
tests/tests/generate_sources_list/ips/mod1/ips/includes/: CMakeLists.txt
tests/tests/generate_sources_list/ips/mod1/ips/includes/rtl/: default_includes.svh  includes.svh  synthesis_includes.svh
tests/tests/generate_sources_list/ips/mod1/ips/submod1/: CMakeLists.txt
tests/tests/generate_sources_list/ips/mod1/ips/submod1/rtl/: submod1.sv
tests/tests/generate_sources_list/ips/mod1/ips/submod2/: CMakeLists.txt
tests/tests/generate_sources_list/ips/mod1/ips/submod2/rtl/: submod2.sv
tests/tests/generate_sources_list/ips/mod1/rtl/: mod1.sv
tests/tests/generate_sources_list/rtl/: top.sv
tests/tests/get_ip_property/: get_ip_property.cmake
tests/tests/help/: help_targets.cmake
tests/tests/ip_compile_definitions/: ip_compile_definitions.cmake  ip_compile_definitions_file_set.cmake  ip_compile_definitions_get_multilang.cmake  ip_compile_definitions_hier.cmake
tests/tests/ip_include_directories/: ip_include_directories.cmake  ip_include_directories_file_set.cmake  ip_include_directories_get_multilang.cmake
tests/tests/ip_include_directories/ip_include_directories_rel_path/: ip_include_directories_rel_path.cmake
tests/tests/ip_include_directories/ip_include_directories_rel_path/test/: CMakeLists.txt
tests/tests/ip_include_directories/ip_include_directories_rel_path/test/otherdir/: CMakeLists.txt
tests/tests/ip_link/: ip_link1.cmake  ip_link_nodepend.cmake  ip_link_version_condition.cmake
tests/tests/ip_link/ip_link_different_subdir/ips/: CMakeLists.txt
tests/tests/ip_link/ip_link_different_subdir/ips/ip2/: CMakeLists.txt
tests/tests/ip_link/ip_link_different_subdir/ips/ip3/: CMakeLists.txt
tests/tests/ip_sources/: ip_source_fail.cmake  ip_sources.cmake  ip_sources_file_set.cmake  ip_sources_get_multilang.cmake  ip_sources_headers.cmake  ip_sources_prepend_replace.cmake
tests/tests/ip_sources/ip_sources_rel_path/: ip_sources_rel_path.cmake
tests/tests/ip_sources/ip_sources_rel_path/test/: CMakeLists.txt
tests/tests/ip_sources/ip_sources_rel_path/test/otherdir/: CMakeLists.txt
tests/tests/ipxact/importer/: file_sets.xml
tests/tests/iverilog/: CMakeLists.txt
tests/tests/iverilog/iverilog_compile_args/: CMakeLists.txt  tb.v
tests/tests/iverilog/iverilog_include_directories/: CMakeLists.txt  tb_incdirs.v
tests/tests/iverilog/iverilog_include_directories/inc/: inc_header.vh
tests/tests/iverilog/iverilog_linked_ips/: CMakeLists.txt  mod.v  tb.v
tests/tests/iverilog/iverilog_multi_top/: CMakeLists.txt  top2.v
tests/tests/iverilog/iverilog_outdir/: CMakeLists.txt  tb.v
tests/tests/iverilog/iverilog_simple_test/: CMakeLists.txt
tests/tests/peakrdl/: CMakeLists.txt
tests/tests/peakrdl/dump/: CMakeLists.txt  golden_make.txt  golden_ninja.txt
tests/tests/peakrdl/html/: CMakeLists.txt
tests/tests/peakrdl/regblock/: CMakeLists.txt  ip2.rdl
tests/tests/utils/compare_lists/: compare_lists.cmake
tests/tests/utils/get_all_ips/: get_all_ips.cmake
tests/tests/utils/help/: help_targets.cmake
tests/tests/utils/options/: options.cmake
tests/tests/vlnv/: vlnv.cmake
(+72 files in other folders)
